memory: log evening M365 flow/cache status and app split decision

--- a/memory/2026-02-09.md
+++ b/memory/2026-02-09.md
@@ -58,3 +58,57 @@
   1) 原始事件先記到 `memory/YYYY-MM-DD.md`
   2) 交給 `gpt-oss:20b` 做摘要草稿
   3) 永久記憶需人工確認（用戶下指令）後再寫入
+
+## OpenClaw / 模型路由與自動化（新增）
+- 已確認目前模型路由：Primary `google-antigravity/claude-opus-4-5-thinking`，fallbacks 已擴充並排序（含 `openai-codex/gpt-5.3-codex`、`openai-codex/gpt-5.2-codex`、`openai-codex/gpt-5.2`、Sonnet、Ollama）。
+- 已建立每 6 小時自動整理流水帳 cron（job: `memory-rollup-every-6h`，id: `6b464b67-5f1c-434a-8737-320286152bd2`），規則為只整理 `memory/*.md`，不動 `MEMORY.md`。
+- 已實測 Ollama `gpt-oss:20b` 可透過 API 正常回應（200），可作為低成本文字整理用途。
+
+## ComfyUI（本地）進展（新增）
+- 已改為「本地 ComfyUI 優先」產圖，Nano Banana 僅停用不作預設。
+- 已完成自動啟動/健康檢查排程方向，目標是減少手動開機進站。
+- 已下載手部偵測模型：`models/ultralytics/bbox/hand_yolov8n.pt`。
+- 新增與調整工作流：
+  - `AI02_face_hand.json`（臉+手雙修復）
+  - `AI03_best_8gb_stable.json`（8GB 穩定版）
+  - `AI03_hq_8gb.json`（精緻慢版）
+- 問題現況：手部與身體比例仍需持續微調（已避免最嚴重縫合，但仍有姿勢/物理一致性議題）。
+
+## M365 表單開發（新增）
+- 用戶轉向要做 M365 表單平台化流程（Forms → Power Automate → SharePoint）。
+- 已確認目標為「病歷室作業管理」場景，並提供里程碑式設計。
+- 目前卡點：瀏覽器雖連上 Forms 首頁，但尚未成功進入「新增表單編輯器」頁面，待用戶手動點進編輯器後可接手代建欄位與分支。
+
+## M365 串接進度更新（下午）
+- Power Automate 流程 `Forms_病歷室入庫` 目前已完成：
+  - 觸發器 `當提交新的回應時`（表單=登記表）
+  - `取得回應詳細資料`（表單=登記表、回應識別碼已綁定）
+  - `建立項目` 動作已加入。
+- 正式 SharePoint 站台已建立：
+  - 名稱：`病歷室365`
+  - URL：`https://o365kmuh.sharepoint.com/sites/998235kmuh.org.tw`
+- `建立項目` 的站台已改到病歷室365，且列表可選值已出現（`病歷室登記`）。
+- 使用者最終需求改為建立並使用清單：`病歷室入庫`（非 `病歷室登記`）。
+- 欄位規格已確認：
+  - 病歷號碼（文字）
+  - 單位（文字）
+  - 登記類型（選擇）
+  - 登記人（文字）
+  - 數量（數字）
+  - SubmittedAt（日期時間）
+  - ReceivedAt（日期時間）
+  - CaseID（文字）
+  - Status（選擇，預設已登記）
+- 目前主要阻塞：Chrome Relay 在 SharePoint 分頁高頻 `tab not found`；在 Power Automate 分頁通常可操作，SharePoint 分頁較不穩，需短暫人工補位保持附掛。
+
+## M365 串接進度更新（傍晚）
+- 使用者回報「期待你幫我新增」後，助手嘗試遠端自動新增 SharePoint 欄位，但實際未穩定落地；後續改成由使用者手動新增、助手即時核對。
+- 使用者提供截圖顯示欄位列已包含：`病歷號碼`、`單位`、`登記類型`、`登記人`、`數量`、`SubmittedAt`、`ReceivedAt`（加上 `標題`）。
+- 在 Power Automate `建立項目` 卡片中，仍僅顯示基礎欄位（`標題`/`內容類型 Id`），推測是 SharePoint 連接器欄位快取未刷新或清單結構同步延遲。
+- 已確認清單頁網址為：`https://o365kmuh.sharepoint.com/sites/998235kmuh.org.tw/Lists/List/AllItems.aspx`，站台根網址為：`https://o365kmuh.sharepoint.com/sites/998235kmuh.org.tw`。
+- 需求策略定案：
+  - 無帳號外包：走 Microsoft Forms（公開可填）
+  - 有帳號外包/內部：走 Power Apps
+  - 後端統一寫入同一 SharePoint 清單並由 Flow 做 CaseID/時間戳/狀態處理
+- 使用者詢問是否需去 Power Apps 設定介面；已確認「當前階段不用」，先收尾 Power Automate + SharePoint。
+- 下一步共識：由助手在 Flow 端重建/重選 `建立項目` 以強制重抓欄位，完成全欄位 mapping 與 CaseID 邏輯後，再進入 App MVP。
