memory: flush durable M365 flow mapping and dedupe status

--- a/memory/2026-02-09.md
+++ b/memory/2026-02-09.md
@@ -112,3 +112,23 @@
   - 後端統一寫入同一 SharePoint 清單並由 Flow 做 CaseID/時間戳/狀態處理
 - 使用者詢問是否需去 Power Apps 設定介面；已確認「當前階段不用」，先收尾 Power Automate + SharePoint。
 - 下一步共識：由助手在 Flow 端重建/重選 `建立項目` 以強制重抓欄位，完成全欄位 mapping 與 CaseID 邏輯後，再進入 App MVP。
+
+## M365 串接進度更新（夜間）
+- 使用者最終確認正式清單以 `病歷室登記` 為準（A），並要求延伸加入「重複登記偵測/防呆」。
+- Power Automate 新流程（新設計工具）骨架已穩定為：
+  1) `當提交新的回應時`（Forms）
+  2) `取得回應詳細資料`
+  3) `建立項目`（SharePoint，站台=`病歷室365`，清單=`病歷室登記`）
+- `建立項目` 已從僅基礎欄位恢復為可見全欄（12/12）。
+- 曾遇到儲存阻塞錯誤：`response_id` 被字串化且前置 `/`（`"/@triggerOutputs()?['body/resourceData/responseId']"`）導致 int32 驗證失敗；已修正為可轉整數的表達式，流程恢復可儲存。
+- 欄位 mapping 當前狀態：
+  - 已綁：`標題`→病歷號碼、`病歷號碼`→病歷號碼、`單位`→單位、`登記人`→登記人。
+  - `SubmittedAt` 已填 `utcNow()`。
+  - `ReceivedAt` 插入 `utcNow()` 時發生重複 token（目前視覺顯示為重複，待清成單一表達式）。
+  - 未完成：`登記類型 Value`、`數量`、`CaseID`（待補 `Update item` 生成邏輯）。
+- SharePoint 現況檢查：`病歷室登記` 已有測試資料，包含重複/近重複紀錄（例如 ID 2/3，且 1/4 可能近重複），且多筆為稀疏欄位資料。
+- 下一步固定順序：
+  1) 完成 `建立項目` 全欄位對應；
+  2) 加入 `Update item` 回寫 `CaseID`；
+  3) 用新 Forms 真實送單做端到端驗證；
+  4) 在 Flow 加入重複檢查規則（複合鍵）並清理既有測試重複資料。
