chore(memory): dedupe and restructure 2026-02-09 daily notes

--- a/memory/2026-02-09.md
+++ b/memory/2026-02-09.md
@@ -2,133 +2,136 @@
 
 ## ComfyUI 臉部修復設定完成 ✅
 
-### 安裝的東西
-- **ComfyUI-Impact-Pack**: 已安裝（含 FaceDetailer, SEGSDetailer 等節點）
-- **ComfyUI-Impact-Subpack**: 已安裝（提供 UltralyticsDetectorProvider）
-- **ultralytics**: Python 套件已安裝
-- **GFPGAN**: 模型 `GFPGANv1.4.pth` 已下載到 `facerestore_models/`
-- **Face Detection Model**: `face_yolov8m.pt` 已下載到 `ultralytics/bbox/`
+### 安裝完成
+- **ComfyUI-Impact-Pack**（含 FaceDetailer, SEGSDetailer）
+- **ComfyUI-Impact-Subpack**（提供 UltralyticsDetectorProvider）
+- **ultralytics** Python 套件
+- **GFPGAN**：`GFPGANv1.4.pth` → `facerestore_models/`
+- **Face Detection Model**：`face_yolov8m.pt` → `ultralytics/bbox/`
 
 ### 最終 Workflow
-- 使用 **FaceDetailer** 節點（一站式修臉）
-- 搭配 **UltralyticsDetectorProvider**（選 `bbox/face_yolov8m.pt`）
-- Workflow 已存為 `AI.json`
-- 位置: `C:\AI\ComfyUI_windows_portable\ComfyUI\user\default\workflows\AI.json`
-- 也備份到 workspace: `comfyui_face_fix.json`
+- 使用 **FaceDetailer**（一站式修臉）
+- Detector：**UltralyticsDetectorProvider**（`bbox/face_yolov8m.pt`）
+- 已存為 `AI.json`
+  - Windows：`C:\AI\ComfyUI_windows_portable\ComfyUI\user\default\workflows\AI.json`
+  - Workspace 備份：`comfyui_face_fix.json`
 
 ### 建議參數（避免變臉）
 - denoise: 0.35
 - cfg: 6.5
 - steps: 16
 
-## Moltbook 註冊 🦞
+---
 
-- **平台**: AI Agent 社交網路
-- **帳號名**: Pi_Canner
-- **Profile**: https://moltbook.com/u/Pi_Canner
-- **狀態**: pending_claim（等待用戶驗證）
-- **驗證碼**: scuttle-HZ42
-- **Claim URL**: https://moltbook.com/claim/moltbook_claim_w2zSa_bPIgqtzsvhirXOS9m6514gxWSj
-- **API Key**: 已存到 `moltbook_credentials.json`
+## Moltbook 註冊 🦞
+- 帳號：`Pi_Canner`
+- Profile：https://moltbook.com/u/Pi_Canner
+- 狀態：`pending_claim`
+- 驗證碼：`scuttle-HZ42`
+- Claim URL：https://moltbook.com/claim/moltbook_claim_w2zSa_bPIgqtzsvhirXOS9m6514gxWSj
+- API Key：已存 `moltbook_credentials.json`
 
 ### 驗證步驟
-1. 用戶需在 X/Twitter 發推文包含驗證碼
-2. 點擊 claim URL 完成驗證
+1. 在 X/Twitter 發包含驗證碼的貼文
+2. 點 claim URL 完成驗證
+
+---
 
 ## 技術筆記
 
-### ComfyUI 8188 Port 被佔用問題
-- 用 `netstat -ano | findstr :8188` 找 PID
-- 用 `taskkill /PID <pid> /F` 關掉
+### ComfyUI 8188 Port 被佔用
+- `netstat -ano | findstr :8188` 找 PID
+- `taskkill /PID <pid> /F` 關閉
 
-### Impact-Pack 安裝注意事項
-- UltralyticsDetectorProvider **不在** Impact-Pack 本體
-- 需要額外安裝 **ComfyUI-Impact-Subpack**
-- pip install 時 ComfyUI 要先關掉（避免 cv2.pyd 權限錯誤）
+### Impact-Pack 安裝注意
+- `UltralyticsDetectorProvider` 不在 Impact-Pack 本體
+- 需額外安裝 **ComfyUI-Impact-Subpack**
+- pip install 前先關 ComfyUI（避免 `cv2.pyd` 權限錯誤）
 
 ### ComfyUI API
-- 可透過 `http://127.0.0.1:8188/prompt` 執行 workflow
-- 用 `/history` 查看結果
-- 輸出圖片在 `ComfyUI/output/`
+- 送單：`http://127.0.0.1:8188/prompt`
+- 查結果：`/history`
+- 輸出：`ComfyUI/output/`
 
-## 記憶流程新規則（2026-02-09）
-- 目標：把「流水帳/日記型記憶」改成自動流程，優先用 `gpt-oss:20b` 做整理與去重。
-- 永久記憶（`MEMORY.md`）**不要自動寫入**；只有用戶明確要求時才更新。
+---
+
+## 記憶流程規則（2026-02-09）
+- 流水帳/日記型記憶可自動整理，優先 `gpt-oss:20b`
+- **禁止自動寫入 `MEMORY.md`**（僅用戶明確要求才更新）
 - 建議流程：
-  1) 原始事件先記到 `memory/YYYY-MM-DD.md`
-  2) 交給 `gpt-oss:20b` 做摘要草稿
-  3) 永久記憶需人工確認（用戶下指令）後再寫入
+  1) 原始事件先寫 `memory/YYYY-MM-DD.md`
+  2) 交給 `gpt-oss:20b` 做摘要草稿/去重
+  3) 永久記憶需人工確認後再寫入
 
-## OpenClaw / 模型路由與自動化（新增）
-- 已確認目前模型路由：Primary `google-antigravity/claude-opus-4-5-thinking`，fallbacks 已擴充並排序（含 `openai-codex/gpt-5.3-codex`、`openai-codex/gpt-5.2-codex`、`openai-codex/gpt-5.2`、Sonnet、Ollama）。
-- 已建立每 6 小時自動整理流水帳 cron（job: `memory-rollup-every-6h`，id: `6b464b67-5f1c-434a-8737-320286152bd2`），規則為只整理 `memory/*.md`，不動 `MEMORY.md`。
-- 已實測 Ollama `gpt-oss:20b` 可透過 API 正常回應（200），可作為低成本文字整理用途。
+---
 
-## ComfyUI（本地）進展（新增）
-- 已改為「本地 ComfyUI 優先」產圖，Nano Banana 僅停用不作預設。
-- 已完成自動啟動/健康檢查排程方向，目標是減少手動開機進站。
-- 已下載手部偵測模型：`models/ultralytics/bbox/hand_yolov8n.pt`。
-- 新增與調整工作流：
-  - `AI02_face_hand.json`（臉+手雙修復）
-  - `AI03_best_8gb_stable.json`（8GB 穩定版）
-  - `AI03_hq_8gb.json`（精緻慢版）
-- 問題現況：手部與身體比例仍需持續微調（已避免最嚴重縫合，但仍有姿勢/物理一致性議題）。
+## OpenClaw / 模型路由與自動化
+- 模型路由已確認：
+  - Primary：`google-antigravity/claude-opus-4-5-thinking`
+  - Fallback：`openai-codex/gpt-5.3-codex` → `openai-codex/gpt-5.2-codex` → `openai-codex/gpt-5.2` → Sonnet → Ollama
+- 已建立每 6 小時整理流水帳 cron：
+  - Job：`memory-rollup-every-6h`
+  - ID：`6b464b67-5f1c-434a-8737-320286152bd2`
+  - 規則：只整理 `memory/*.md`，不動 `MEMORY.md`
+- 已實測 Ollama `gpt-oss:20b` API 回應正常（200）
 
-## M365 表單開發（新增）
-- 用戶轉向要做 M365 表單平台化流程（Forms → Power Automate → SharePoint）。
-- 已確認目標為「病歷室作業管理」場景，並提供里程碑式設計。
-- 目前卡點：瀏覽器雖連上 Forms 首頁，但尚未成功進入「新增表單編輯器」頁面，待用戶手動點進編輯器後可接手代建欄位與分支。
+---
 
-## M365 串接進度更新（下午）
-- Power Automate 流程 `Forms_病歷室入庫` 目前已完成：
-  - 觸發器 `當提交新的回應時`（表單=登記表）
-  - `取得回應詳細資料`（表單=登記表、回應識別碼已綁定）
-  - `建立項目` 動作已加入。
-- 正式 SharePoint 站台已建立：
+## ComfyUI（本地）進展
+- 策略改為「本地 ComfyUI 優先」，Nano Banana 非預設
+- 已完成自動啟動/健康檢查排程方向（降低手動開機）
+- 已下載手部模型：`models/ultralytics/bbox/hand_yolov8n.pt`
+- 工作流新增/調整：
+  - `AI02_face_hand.json`（臉+手）
+  - `AI03_best_8gb_stable.json`（8GB 穩定）
+  - `AI03_hq_8gb.json`（高品質慢版）
+- 未解問題：手部與身體比例仍需持續微調（已避開最嚴重縫合）
+
+---
+
+## M365（Forms → Power Automate → SharePoint）整合進度
+
+### 目標與策略
+- 場景：病歷室作業管理
+- 策略：
+  - 無帳號外包：Microsoft Forms（公開）
+  - 有帳號外包/內部：Power Apps
+  - 後端統一寫入 SharePoint 清單，Flow 負責 CaseID/時間戳/狀態
+
+### 目前基礎建置
+- SharePoint 站台：
   - 名稱：`病歷室365`
   - URL：`https://o365kmuh.sharepoint.com/sites/998235kmuh.org.tw`
-- `建立項目` 的站台已改到病歷室365，且列表可選值已出現（`病歷室登記`）。
-- 使用者最終需求改為建立並使用清單：`病歷室入庫`（非 `病歷室登記`）。
-- 欄位規格已確認：
-  - 病歷號碼（文字）
-  - 單位（文字）
-  - 登記類型（選擇）
-  - 登記人（文字）
-  - 數量（數字）
-  - SubmittedAt（日期時間）
-  - ReceivedAt（日期時間）
-  - CaseID（文字）
-  - Status（選擇，預設已登記）
-- 目前主要阻塞：Chrome Relay 在 SharePoint 分頁高頻 `tab not found`；在 Power Automate 分頁通常可操作，SharePoint 分頁較不穩，需短暫人工補位保持附掛。
+- Flow `Forms_病歷室入庫` 已完成核心骨架：
+  1. `當提交新的回應時`
+  2. `取得回應詳細資料`
+  3. `建立項目`（SharePoint）
 
-## M365 串接進度更新（傍晚）
-- 使用者回報「期待你幫我新增」後，助手嘗試遠端自動新增 SharePoint 欄位，但實際未穩定落地；後續改成由使用者手動新增、助手即時核對。
-- 使用者提供截圖顯示欄位列已包含：`病歷號碼`、`單位`、`登記類型`、`登記人`、`數量`、`SubmittedAt`、`ReceivedAt`（加上 `標題`）。
-- 在 Power Automate `建立項目` 卡片中，仍僅顯示基礎欄位（`標題`/`內容類型 Id`），推測是 SharePoint 連接器欄位快取未刷新或清單結構同步延遲。
-- 已確認清單頁網址為：`https://o365kmuh.sharepoint.com/sites/998235kmuh.org.tw/Lists/List/AllItems.aspx`，站台根網址為：`https://o365kmuh.sharepoint.com/sites/998235kmuh.org.tw`。
-- 需求策略定案：
-  - 無帳號外包：走 Microsoft Forms（公開可填）
-  - 有帳號外包/內部：走 Power Apps
-  - 後端統一寫入同一 SharePoint 清單並由 Flow 做 CaseID/時間戳/狀態處理
-- 使用者詢問是否需去 Power Apps 設定介面；已確認「當前階段不用」，先收尾 Power Automate + SharePoint。
-- 下一步共識：由助手在 Flow 端重建/重選 `建立項目` 以強制重抓欄位，完成全欄位 mapping 與 CaseID 邏輯後，再進入 App MVP。
+### 清單與欄位現況（最新）
+- 正式清單以 **`病歷室登記`** 為準
+- 欄位已包含：`病歷號碼`、`單位`、`登記類型`、`登記人`、`數量`、`SubmittedAt`、`ReceivedAt`（另有 `標題`）
+- `建立項目` 已恢復可見全欄（12/12）
 
-## M365 串接進度更新（夜間）
-- 使用者最終確認正式清單以 `病歷室登記` 為準（A），並要求延伸加入「重複登記偵測/防呆」。
-- Power Automate 新流程（新設計工具）骨架已穩定為：
-  1) `當提交新的回應時`（Forms）
-  2) `取得回應詳細資料`
-  3) `建立項目`（SharePoint，站台=`病歷室365`，清單=`病歷室登記`）
-- `建立項目` 已從僅基礎欄位恢復為可見全欄（12/12）。
-- 曾遇到儲存阻塞錯誤：`response_id` 被字串化且前置 `/`（`"/@triggerOutputs()?['body/resourceData/responseId']"`）導致 int32 驗證失敗；已修正為可轉整數的表達式，流程恢復可儲存。
-- 欄位 mapping 當前狀態：
-  - 已綁：`標題`→病歷號碼、`病歷號碼`→病歷號碼、`單位`→單位、`登記人`→登記人。
-  - `SubmittedAt` 已填 `utcNow()`。
-  - `ReceivedAt` 插入 `utcNow()` 時發生重複 token（目前視覺顯示為重複，待清成單一表達式）。
-  - 未完成：`登記類型 Value`、`數量`、`CaseID`（待補 `Update item` 生成邏輯）。
-- SharePoint 現況檢查：`病歷室登記` 已有測試資料，包含重複/近重複紀錄（例如 ID 2/3，且 1/4 可能近重複），且多筆為稀疏欄位資料。
-- 下一步固定順序：
-  1) 完成 `建立項目` 全欄位對應；
-  2) 加入 `Update item` 回寫 `CaseID`；
-  3) 用新 Forms 真實送單做端到端驗證；
-  4) 在 Flow 加入重複檢查規則（複合鍵）並清理既有測試重複資料。
+### Mapping 進度
+- 已綁定：
+  - `標題` → 病歷號碼
+  - `病歷號碼` → 病歷號碼
+  - `單位` → 單位
+  - `登記人` → 登記人
+  - `SubmittedAt` → `utcNow()`
+- 待完成：
+  - `ReceivedAt`（目前有重複 token，需清為單一表達式）
+  - `登記類型 Value`
+  - `數量`
+  - `CaseID`（需補 `Update item` 回寫）
+
+### 已排除/已知阻塞
+- 已修正儲存錯誤：`response_id` 曾被字串化且前置 `/`，造成 int32 驗證失敗
+- Chrome Relay 在 SharePoint 分頁偶發 `tab not found`（Power Automate 分頁較穩）
+- 清單已有測試資料且含重複/近重複（需後續清理）
+
+### 下一步（固定順序）
+1. 完成 `建立項目` 全欄位 mapping
+2. 新增 `Update item` 回寫 `CaseID`
+3. 用新 Forms 做端到端實測
+4. 加入重複檢查（複合鍵）並清理測試重複資料
