memory: flush external pickup flow fix and next steps

--- a/memory/2026-02-09.md
+++ b/memory/2026-02-09.md
@@ -135,3 +135,20 @@
 2. 新增 `Update item` 回寫 `CaseID`
 3. 用新 Forms 做端到端實測
 4. 加入重複檢查（複合鍵）並清理測試重複資料
+
+---
+
+## M365 外部取件 Flow（病歷室取件）晚間進度
+- 已確認並修正動作型別誤用：
+  - 原本誤放 `取得項目 (Get item/單筆)`，導致需要 `識別碼`，且把 OData 條件塞進識別碼欄位。
+  - 已改為正確 `取得多個項目 (Get items/多筆)`。
+- `取得多個項目` 目前設定：
+  - Site: `病歷室365 - https://o365kmuh.sharepoint.com/sites/998235kmuh.org.tw`
+  - List: `病歷室登記`
+  - Filter Query: `病歷號碼 eq '@{outputs(''取得回應詳細資料'')?[''body/病歷號碼'']}' and Status eq '已登記'`
+- 下一個待完成節點：
+  1) 在 `取得多個項目` 後新增 `Condition`
+  2) 判斷式：`length(body('取得多個項目')?['value']) = 1`
+  3) Yes 分支做 `更新項目`（取件人、PickedAt=utcNow()、Status=已取件）
+  4) No 分支保留記錄（不更新）
+- 操作風險/阻塞仍在：Power Automate 新設計器右側探索面板常卡住在連接器全清單，導致接管點擊不穩定，需持續「先完成一個節點就儲存」。
