memory: flush PA flow debugging findings and SP internal field clue

--- a/memory/2026-02-09.md
+++ b/memory/2026-02-09.md
@@ -152,3 +152,15 @@
   3) Yes 分支做 `更新項目`（取件人、PickedAt=utcNow()、Status=已取件）
   4) No 分支保留記錄（不更新）
 - 操作風險/阻塞仍在：Power Automate 新設計器右側探索面板常卡住在連接器全清單，導致接管點擊不穩定，需持續「先完成一個節點就儲存」。
+
+### 2026-02-09 晚間補充（外部取件流程反覆除錯）
+- `病歷室取件` 流程主幹已固定：
+  - 當提交新的回應時 → 取得回應詳細資料 → 取得多個項目 → 條件(length=1) → 更新項目。
+- 多次失敗主因確認：
+  1) `取得多個項目` 的 OData `篩選查詢` 欄位被多次貼上造成「污染拼接」，出現殘字串（如 `...Status eq '已登記'ubstringof...`），導致無效運算式。
+  2) 表單動態欄位 token 路徑不穩時會變空字串，造成查詢變成 `Title eq ''` 或 `substringof('', Title)`。
+  3) OData 使用顯示名稱 `單位` 會報「欄不存在」，需用內部欄位名。
+- 已確認條件節點本身語法正常（`length(body('取得多個項目')?['value']) = 1`），真正卡點多為上游回傳筆數非 1。
+- 已確認 `更新項目` 的 `ID` 為 SharePoint 主鍵定位用途（更新必填），不是身份比對鍵。
+- 使用者偏好業務快速流程，但需降低誤配；目前方向：`後3碼 + 單位 + Status=已登記`（唯一才更新），或改回完整病歷號碼比對。
+- 重要發現：SharePoint 欄位格式 JSON 顯示 `病歷號碼` 內部名為 `$_x75c5__x6b77__x865f__x78bc_`（證實欄位存在）。
