docs(memory): record antigravity instability and update path mismatch

--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -15,3 +15,20 @@
 - 檢查範圍：`2026-02-09.md`、`2026-02-10.md`
 - 結果：無新增可去重或重構內容（前次 00:07 整理後結構維持一致）
 - 規則遵循：未更新 `MEMORY.md`
+
+## 07:2x-08:0x 模型穩定性與更新處理
+- 使用者反映 Google antigravity（特別是 `claude-opus-4-5-thinking`）不穩，對話中多次出現：
+  - `Claude Opus 4.5 is no longer available. Please switch to Claude Opus 4.6.`
+- 驗證結果：`claude-sonnet-4-5-thinking` 可切換且可用；Opus 4.5 仍間歇性不可用。
+- 已依使用者要求執行 Gateway 重置流程：
+  - 先透過 config patch 開啟 `commands.restart=true`
+  - Gateway 實際已成功重啟並恢復正常運作。
+- 使用者新偏好（已同步至 `MEMORY.md` 並 commit）：
+  - 之後有更新消息要主動告知，且先提供「升級好處/壞處」評估再讓使用者決定。
+- 依使用者同意執行升級：
+  - `openclaw update --yes` 因非 git 安裝 + 套件管理偵測問題而跳過。
+  - 改用 `npm i -g openclaw@latest` 成功安裝 `2026.2.9`。
+- 升級後重要狀態：
+  - `~/.npm-global/bin/openclaw` 為 `2026.2.9`
+  - `/usr/bin/openclaw` 仍是 `2026.2.6-3`
+  - 目前存在 PATH/執行檔來源不一致（新舊並存）需後續整理。
