--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -32,3 +32,4 @@
   - `~/.npm-global/bin/openclaw` 為 `2026.2.9`
   - `/usr/bin/openclaw` 仍是 `2026.2.6-3`
   - 目前存在 PATH/執行檔來源不一致（新舊並存）需後續整理。
+- 使用者偏好：傾向由主代理自行判斷並分派給子代理處理（除非使用者特別要求不開/指定）。
