docs(memory): capture m365 retrieval flow stabilization conclusions

--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -33,3 +33,9 @@
   - `/usr/bin/openclaw` 仍是 `2026.2.6-3`
   - 目前存在 PATH/執行檔來源不一致（新舊並存）需後續整理。
 - 使用者偏好：傾向由主代理自行判斷並分派給子代理處理（除非使用者特別要求不開/指定）。
+- M365 取件 Flow（Forms→Power Automate→SharePoint）穩定化研究結論：
+  - 建議架構：Get items（OData 粗篩 + Top Count）→ Filter array（精篩/字串末三碼/大小寫/空值防護）→ Condition 依 length=0/1/>1 分流 → Update item。
+  - 關鍵 expression：`equals(length(body('Filter_array')),1)`、`first(body('Filter_array'))?['ID']`，以及以 `trim(coalesce(...,''))`、`toLower()`、`if(greaterOrEquals(length(...),3),substring(...),...)` 做防呆。
+  - OData 雷點：顯示名 vs 內部欄位名、單引號跳脫、null vs ''、型別不一致、函式支援落差、清單 threshold/索引。
+  - `Cannot edit in read-only editor` 排查：是否在 run history、權限/owner、managed solution、DLP、瀏覽器快取/UI，建議用 Compose/變數承接 expression。
+  - 最短測試：驗證 Get items 筆數、Filter array 筆數、分支、Update item 目標 ID；測例含唯一/無命中/重複/空值/含單引號特殊字元。
