docs(memory): record MRN+Unit as retrieval matching key

--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -39,3 +39,4 @@
   - OData 雷點：顯示名 vs 內部欄位名、單引號跳脫、null vs ''、型別不一致、函式支援落差、清單 threshold/索引。
   - `Cannot edit in read-only editor` 排查：是否在 run history、權限/owner、managed solution、DLP、瀏覽器快取/UI，建議用 Compose/變數承接 expression。
   - 最短測試：驗證 Get items 筆數、Filter array 筆數、分支、Update item 目標 ID；測例含唯一/無命中/重複/空值/含單引號特殊字元。
+- 使用者決策：M365 取件配對鍵以「病歷號碼 + 單位」為準（不依賴表單回覆順序或 SharePoint ID/序號）。
