--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -40,3 +40,4 @@
   - `Cannot edit in read-only editor` 排查：是否在 run history、權限/owner、managed solution、DLP、瀏覽器快取/UI，建議用 Compose/變數承接 expression。
   - 最短測試：驗證 Get items 筆數、Filter array 筆數、分支、Update item 目標 ID；測例含唯一/無命中/重複/空值/含單引號特殊字元。
 - 使用者決策：M365 取件配對鍵以「病歷號碼 + 單位」為準（不依賴表單回覆順序或 SharePoint ID/序號）。
+- Power Automate 新設計工具注意：Filter array（Query）動作的 `where` 必須是 template language expression（通常需 `@and(...)`），若被當成純字串（缺 `@` 或 UI 輸入方式不對）會在儲存時出現 400：`WorkflowRunActionInputsInvalidProperty` / `Property 'where' must be a template language expression.`；較穩作法是清空 fx 後改用「基本模式」用 UI 重建條件。
