--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -42,4 +42,6 @@
 - 使用者決策：M365 取件配對鍵以「病歷號碼 + 單位」為準（不依賴表單回覆順序或 SharePoint ID/序號）。
 - Power Automate 新設計工具注意：Filter array（Query）動作的 `where` 必須是 template language expression（通常需 `@and(...)`），若被當成純字串（缺 `@` 或 UI 輸入方式不對）會在儲存時出現 400：`WorkflowRunActionInputsInvalidProperty` / `Property 'where' must be a template language expression.`；較穩作法是清空 fx 後改用「基本模式」用 UI 重建條件。
 - Forms→Flow 取值關鍵：`取得回應詳細資料` 的 body 欄位 key 通常是 `r<hash>`（非中文題目名）。已確認取件表單回傳 key：MRN=`rf74a84e5e7804be8a222caa8f7374367`、取件人=`ra262c3a9c3654135a8cb8113c0fb6c0c`、單位=`r3df245b9050842b8a2a6dbd17ab48082`；Flow 必須改用這些 key 才不會寫入空白。
-- 入庫/登記 Flow（Forms_病歷室入庫）目前 PostItem 只寫死單位"/"、數量1、Status=已登記，導致其他欄位空白；需依登記表單 `取得回應詳細資料.body` 的 r<hash> keys 重新 mapping 到 SharePoint 欄位。已先在 UI 把入庫 Flow 的 Create item 設定 SubmittedAt=`utcNow()`，並清空 ReceivedAt（入庫不應寫取件時間）。
+- 入庫/登記 Flow（Forms_病歷室入庫）需將 Create item 正確帶入 Forms 動態內容；不可把 `outputs('取得回應詳細資料')?['body/<key>']` 當純文字塞進 SharePoint 欄位。若用 code view，表達式需前綴 `@` 才會執行。
+- 入庫 Flow 曾出現「寫兩筆、一筆空白」：Trigger 原本含 `splitOn: @triggerOutputs()?['body/value']`，已確認移除 splitOn 後的 trigger JSON（無 splitOn、僅 conditions:[]）為正確方向。
+- 取件 Flow（病歷室取件）上線安全原則：Update item 僅更新取件相關欄位（Id、ReceivedAt=utcNow、Status=已取件、取件人），其餘欄位需移除以避免把 null/空值回寫洗掉資料。
