docs: add environment quick section and update daily memory

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -29,3 +29,22 @@
   - `gemini` → `google/gemini-3-pro-preview`
   - `gemini-flash` → `google/gemini-3-flash-preview`
   - 可透過 `agents.defaults.models` 加入，並在 primary / fallbacks 使用；使用者希望將 Gemini 3 Pro/Flash 納入模型清單。
+
+## OpenClaw 設定調整（穩定性）
+- 使用者回報：Opus 系列約 5 天後恢復額度；期間 Google OAuth 會滿額。
+- 已執行：用 `gateway config.patch` 將 embedded agent **primary 暫時切到 GPT**，避免撞 google-antigravity OAuth：
+  - primary → `openai-codex/gpt-5.2`
+  - fallbacks → `openai-codex/gpt-5.3-codex` → `openai-codex/gpt-5.2-codex` → `ollama/gpt-oss:20b` → (最後) `google-antigravity/claude-sonnet-4-5-thinking` / `google-antigravity/claude-opus-4-5-thinking`
+- 已建立提醒：5 天後同一時間提醒可將 Claude（建議 Opus 4.6）拉回前面。
+
+## 專案文件化（SOP / Cheatsheet）
+- 已建立專案統整 SOP：`projects/m365-病歷室登記_取件-專案統整.md`
+- 已建立 OpenClaw CLI 小抄：`projects/openclaw-cheatsheet-Canner.md`，並補齊 sessions/agents/memory/models 常用指令。
+- 針對 repo：新增 `.gitignore`（避免 credentials 與大型二進位檔被加入版本控管），並 commit 上述文件。
+
+## 條碼掃描（研究結論內化）
+- 研究結論：Power Apps 手機端建議用 **Barcode reader**（較新版），OnScan 取值常見用 `First(Self.Barcodes).Value` 並 `Reset(TextInput)` 強制回填；需在 **Power Apps Mobile App** 測試 + 確認相機權限 + Save/Publish 後重開 App。
+- 使用者要求：不需提供一堆連結，改為我內化成固定排查劇本（A/B/C：不開相機 / 有掃到不回填 / 掃不到）。
+
+## 記憶策略（使用者偏好再確認）
+- 使用者希望：daily 記憶可更系統化，且「技術突破」值得記；我承諾採用：摘要 + 附錄 + 突破/教訓（但不自動寫入 MEMORY.md，僅會提議詢問）。
